--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ tokio-postgres = "0.7.8"
 postgres-types = { version = "0.2.5", features = ["derive", "array-impls"] }
 reqwest = "0.11.8"
 tokio = { version = "1.29.1", features = ["sync", "rt-multi-thread"] }
-anyhow = "1.0.72"
+eyre = "0.6.8"
 log = "0.4.19"
 env_logger = "0.10.0"
 async-trait = "0.1.72"
