--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ futures = "0.3.28"
 bb8 = "0.8.1"
 bb8-postgres = "0.8.1"
 tokio-postgres = "0.7.8"
-postgres-types = { version = "0.2.5", features = ["derive", "array-impls"] }
+postgres-types = { version = "0.2.5", features = ["derive", "array-impls", "with-chrono-0_4"] }
 reqwest = "0.11.8"
 tokio = { version = "1.29.1", features = ["sync", "rt-multi-thread"] }
 anyhow = "1.0.72"
@@ -23,3 +23,5 @@ async-trait = "0.1.72"
 itertools = "0.11.0"
 toml = "0.7.6"
 serde = "1.0.185"
+bytes = "1.5.0"
+interim = { version = "0.1.1", features = ["std", "chrono"] }
