--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,14 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.26"
-poise = "0.5.7"
+poise = { version = "0.5.7" }
 regex = "1.9.1"
 futures = "0.3.28"
 bb8 = "0.8.1"
 bb8-postgres = "0.8.1"
 tokio-postgres = "0.7.8"
 postgres-types = { version = "0.2.5", features = ["derive", "array-impls", "with-chrono-0_4"] }
-reqwest = "0.11.8"
+reqwest = { version = "0.11.8", features = ["tokio-rustls"], default-features = false }
 tokio = { version = "1.29.1", features = ["sync", "rt-multi-thread"] }
 anyhow = "1.0.72"
 log = "0.4.19"
@@ -25,3 +25,5 @@ toml = "0.7.6"
 serde = "1.0.185"
 bytes = "1.5.0"
 interim = { version = "0.1.1", features = ["std", "chrono"] }
+lazy_static = "1.4.0"
+base64 = "0.21.7"
